--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,10 @@
             <ion-icon name="person-circle-outline"></ion-icon>
              Selected list
           </ion-item>
+          <ion-item (click)="RedirectToPage('mylist')">
+            <ion-icon name="person-circle-outline"></ion-icon>
+             My list
+          </ion-item>
           <ion-item (click)="RedirectToPage('terms')">
             <ion-icon name="clipboard-outline" ></ion-icon> Terms & Conditions
           </ion-item>
