--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div>
 <ion-tab-bar slot="bottom" style="--ion-background-color: #0d6e9b">
-    <ion-tab-button tab="home" style="color: white;" (click)="TabBtnClick('itemdetail')">
+    <ion-tab-button tab="home" style="color: white;" (click)="TabBtnClick('selectuserpage')">
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
@@ -13,6 +13,10 @@
     <ion-tab-button tab="call"  style="color: white;" (click)="TabBtnClick('selecteditems')">
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Selected list</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="call"  style="color: white;" (click)="TabBtnClick('mylist')">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>My list</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </div>
