--- a/src/app/components/sendertravelerdata/sendertravelerdata.component.html
+++ b/src/app/components/sendertravelerdata/sendertravelerdata.component.html
@@ -13,8 +13,8 @@
           </ion-col>
           <ion-col>
             <div>
-              <p><strong> Date & Time</strong></p>
-              <p>{{itemsData.dateoftravel}} ({{itemsData.timeoftravel}})</p>
+              <p><strong> Date </strong></p>
+              <p>{{itemsData.dateoftravel}} </p>
             </div>
           </ion-col>
         </ion-row>
