--- a/src/app/pages/itemdetail/itemdetail.page.scss
+++ b/src/app/pages/itemdetail/itemdetail.page.scss
@@ -8,3 +8,12 @@
     // margin-bottom: 4px;
     margin-top: 3px;
 }
+
+ion-input ::placeholder {  
+                  
+    /* Firefox, Chrome, Opera */ 
+    text-align: right; 
+} 
+.aligintextplacwholder{
+    text-align: right; 
+}
