--- a/src/app/pages/registerpage/registerpage.page.html
+++ b/src/app/pages/registerpage/registerpage.page.html
@@ -39,6 +39,13 @@
               <ion-input maxlength="10" formControlName="phone" type="text" required ></ion-input>
             </ion-item>
           </ion-col>
+
+          <ion-col size="12">
+            <ion-item>
+              <ion-label position="floating">MPIN</ion-label>
+              <ion-input maxlength="4" formControlName="mpin" type="text" required ></ion-input>
+            </ion-item>
+          </ion-col>
         
         </ion-row>
         <ion-row>
