--- a/src/app/pages/selectuserpage/selectuserpage.page.html
+++ b/src/app/pages/selectuserpage/selectuserpage.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar style="--ion-background-color: #0d6e9b;
   color: white;">
     <ion-title side="center">Select type of user</ion-title>
-    <ion-buttons slot="start" (click)="backScreen()">
+    <!-- <ion-buttons slot="start" (click)="backScreen()">
       <ion-button autoHide="false" >
         <ion-icon name="arrow-back-outline" ></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 <ion-content>
