--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,15 +28,15 @@
             <ion-icon name="information-circle-outline"></ion-icon> Add Details
           </ion-item>
           <ion-item (click)="RedirectToPage('useradditemslist')">
-            <ion-icon name="people-circle-outline"></ion-icon> Main list
+            <ion-icon name="people-circle-outline"></ion-icon> My list
           </ion-item>
           <ion-item (click)="RedirectToPage('selecteditems')">
             <ion-icon name="person-circle-outline"></ion-icon>
              Selected list
           </ion-item>
-          <ion-item (click)="RedirectToPage('mylist')">
+          <ion-item (click)="RedirectToPage('mylist')"> 
             <ion-icon name="person-circle-outline"></ion-icon>
-             My list
+             Party list
           </ion-item>
           <ion-item (click)="RedirectToPage('terms')">
             <ion-icon name="clipboard-outline" ></ion-icon> Terms & Conditions
