--- a/src/app/components/sendertravelerdata/sendertravelerdata.component.html
+++ b/src/app/components/sendertravelerdata/sendertravelerdata.component.html
@@ -1,7 +1,12 @@
+
 <ion-card class="sendertravelrdata-card">
   <ion-card-content >
     <div>
       <ion-radio slot="start" *ngIf="radioselecbtns" [value]="itemsData"></ion-radio>
+      <ion-col  *ngIf="deleteselecbtns" class="ion-text-end"  style="right: 0;position: absolute;" >
+        <ion-icon class="ion-icons-bottom ion-text-end" name="trash" (click)="deletemyitem(itemsData)"></ion-icon>
+      </ion-col>
+
       <ion-grid>
         <ion-row>
           <ion-col>
