--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
 
     <ion-tab-button tab="person"  style="color: white;" (click)="TabBtnClick('useradditemslist')">
       <ion-icon name="people-circle-outline"></ion-icon>
-      <ion-label>Main list</ion-label>
+      <ion-label>My list</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="call"  style="color: white;" (click)="TabBtnClick('selecteditems')">
@@ -16,7 +16,7 @@
     </ion-tab-button>
     <ion-tab-button tab="call"  style="color: white;" (click)="TabBtnClick('mylist')">
       <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>My list</ion-label>
+      <ion-label>Party list</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </div>
