--- a/src/app/pages/aboutuspage/aboutuspage.page.html
+++ b/src/app/pages/aboutuspage/aboutuspage.page.html
@@ -7,19 +7,23 @@
         <ion-img src="../../../assets/images/aboutus.png" ></ion-img>
         </ion-item>
         <ion-card-content>
-        <p><strong>Traveller’s Courier........... Makes life more comfortable.
-
+        <p><strong>Traveller’s Courier........... 
+          <br>
+          Makes life more comfortable.
+          <br><br>
           We have launched this APP with the aim of providing services to the people who wanted to send their Articles/items to different places without any delay and bearing financial over weight.
           
           One can register in this APP to get benefit as a sender as well as a traveller. Sender and traveller can select a suitable party in this APP and pick them either to send or to carry the articles by discussing the fare and other details.
           
           As a traveller one can earn money which will meet his travelling expenses fully or partially by carrying the article as well as the sender will send their articles more safe and fast at low cost.
           <br>
+          <br>
           Please support us by installing, using and refer traveller’s Courier APP to your friends.
+          <br>
           <br>
           For any suggestions, queries and complaints: travellerscourier@gmail.com.
           <br>
-          
+          <br>
           Thank You.
           </strong></p>
         </ion-card-content>
