--- a/src/app/pages/mpinpage/mpinpage.page.html
+++ b/src/app/pages/mpinpage/mpinpage.page.html
@@ -57,7 +57,7 @@
   
       <span (click)="forgetMPIN()"  style="float: right;
       margin-right: 14px;font-size: 14px; font-style:bold rgb(153, 59, 30);text-decoration: underline;">
-  forget mpin
+  forgot mpin
   </span>
 </ion-card-content>
 </ion-card>
