--- a/src/app/pages/dashboardpage/dashboardpage.page.html
+++ b/src/app/pages/dashboardpage/dashboardpage.page.html
@@ -13,7 +13,7 @@
   <img  *ngIf="hidden"  src="/assets/images/nodata.jpg">
   <form [formGroup]="selectedData" (ngSubmit)="saveSenderDetails()">
   <ion-radio-group  (ionChange)="radioGroupChange($event)" *ngIf="!hidden">
-  <app-sendertravelerdata *ngFor="let itemData of itemsListData" [itemsData]="itemData" [deleteselecbtns]="false" [radioselecbtns]="true" [bottomoptions]="false"></app-sendertravelerdata>
+  <app-sendertravelerdata *ngFor="let itemData of itemsListData" [itemsData]="itemData" [deleteselecbtns]="false" [reviewselecbtns]="true" [radioselecbtns]="true" [bottomoptions]="false"></app-sendertravelerdata>
   </ion-radio-group>
   <ion-button type="submit"  expand="full" color="primary" *ngIf="!hidden">Submit</ion-button>
 </form>
