--- a/src/app/pages/aboutuspage/aboutuspage.page.html
+++ b/src/app/pages/aboutuspage/aboutuspage.page.html
@@ -9,7 +9,7 @@
         <ion-card-content>
         <p><strong>Traveller’s Courier........... 
           <br>
-          Makes life more comfortable.
+          The Smart Courier
           <br><br>
           We have launched this APP with the aim of providing services to the people who wanted to send their Articles/items to different places without any delay and bearing financial over weight.
           
