--- a/src/app/pages/full-details-ofitems/full-details-ofitems.page.html
+++ b/src/app/pages/full-details-ofitems/full-details-ofitems.page.html
@@ -70,14 +70,14 @@
           <p>amount :<span>{{ItemData.amount}}</span></p>
         </ion-col>
       </ion-row>
-      <ion-row  *ngIf="ItemData.starrate >0"> 
+      <!-- <ion-row  *ngIf="ItemData.starrate >0"> 
         <ion-col>
           <p><strong>Review</strong></p>
           <p>Rating: {{ItemData.starrate}} Star</p>
           <p>Comments: {{ItemData.stardescription}}</p>
 
         </ion-col>
-      </ion-row>
+      </ion-row> -->
       <ion-row>
       </ion-row>
     </ion-grid>
