--- a/src/app/pages/mylist/mylist.page.html
+++ b/src/app/pages/mylist/mylist.page.html
@@ -23,7 +23,7 @@
       </ion-label>
     </ion-col>
     </ion-row>
-  <app-sendertravelerdata *ngFor="let itemData of itemsListData"  (deleteSelectedItemEvent)="getuserData()" [deleteselecbtns]="false" [itemsData]="itemData" [radioselecbtns]="false" [bottomoptions]="false"></app-sendertravelerdata>
+  <app-sendertravelerdata *ngFor="let itemData of itemsListData"  (deleteSelectedItemEvent)="getuserData()" [deleteselecbtns]="false" [itemsData]="itemData" [radioselecbtns]="false" [bottomoptions]="false"  [bottomrating]="true"></app-sendertravelerdata>
 </form>
 </ion-content>
 <app-footer></app-footer>
